--- a/files/service/chat-messages-service/chat-messages-dev.yml
+++ b/files/service/chat-messages-service/chat-messages-dev.yml
@@ -3,7 +3,7 @@ spring:
     mongodb:
       user: chat-messages-service-root
       password: chat-messages-service-root-pass-123
-      uri: mongodb://chat-messages-service-root:chat-messages-service-root-pass-123@localhost:28017/?authSource=admin
+      uri: mongodb://chat-messages-service-root:chat-messages-service-root-pass-123@localhost:28017/chat_messages_service_database?authSource=admin
 
   rabbitmq:
     host: localhost
