--- a/files/service/mail-service/mail-docker.yml
+++ b/files/service/mail-service/mail-docker.yml
@@ -1,7 +1,19 @@
 spring:
   mail:
-    host: mailhog-service
-    port: 1025
+    host: smtp.gmail.com
+    port: 587
+    username: nnduy8501@gmail.com
+    password: henohdkjjmzfbynw
+    protocol: smtp
+    tls: true
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          ssl:
+            trust: smtp.gmail.com
   task:
     execution:
       thread-name-prefix: mail-service-task-
